<resources>
    <string name="app_name">Github Users</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_title">Name:</string>
    <string name="company_title">Company:</string>
    <string name="bio_title">Bio:</string>
    <string name="following_title">Following</string>
    <string name="follower_title">Follower</string>
</resources>